make cmake support header files & auto format with clang-format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,12 @@ project(
 set(SFML_STATIC_LIBRARIES TRUE)
 find_package(SFML 2.5.1 COMPONENTS graphics REQUIRED)
 
-add_executable(${PROJECT_NAME}
-	src/main.cpp
+add_executable(${PROJECT_NAME})
+
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_sources(${PROJECT_NAME} PUBLIC
+	"src/main.cpp"
+	"src/Bar.cpp"
 )
 
 target_link_libraries(${PROJECT_NAME} sfml-graphics)
