--- a/.github/workflows/nightly_build.yml
+++ b/.github/workflows/nightly_build.yml
@@ -75,7 +75,9 @@ jobs:
 
       - name: Build SFML
         if: steps.cache-sfml.outputs.cache-hit != 'true'
+        shell: bash
         run: |
+          set -e
           git clone https://github.com/SFML/SFML --depth 1
           pushd SFML
             cmake -B build -DSFML_USE_STATIC_STD_LIBS=TRUE -DBUILD_SHARED_LIBS=FALSE
@@ -88,7 +90,9 @@ jobs:
         uses: actions/checkout@v2.3.4
 
       - name: Build Project
+        shell: bash
         run: |
+          set -e
           cmake -B build
           cmake --build build --config Release
           cmake --install build --config Release
