--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ endif()
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_sources(${PROJECT_NAME} PUBLIC
 	"src/SortingVisualizer/main.cpp"
+	"src/SortingVisualizer/Bar.cpp"
 	"src/SortingVisualizer/Collection.cpp"
 	"src/SortingVisualizer/Display.cpp"
 	"src/SortingVisualizer/Algorithms/BubbleSort.cpp"
